2012-01-03  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* include/mcs/StreamingJoiner.h: Finish Joiner.
	* src/mcs/StreamingJoiner.cpp: Likewise.

	* include/mcs/NewBaseDispatcher.h: include.

	* include/mcs/NewBeliefState.h: New typedef(s) for Joiner.

	* include/mcs/NewJoinerDispatcher.h: Dispatcher by query_id.

	* include/mcs/QueryID.h: Add unset_neighbor_offset().

	* include/mcs/ReturnedBeliefState.h: ReturnedBeliefStateList now contains pointers.
	* src/mcs/ReturnedBeliefState.cpp: Likewise.
	* testsuite/testBeliefState.cpp: Adapt testcase.

	* include/mcs/Makefile.am: Add BaseJoiner.h and StreamingJoiner.h.
	* src/mcs/Makefile.am: Add BaseJoiner.cpp and StreamingJoiner.cpp.

	* include/mcs/BaseJoiner.h: New file.
	* src/mcs/BaseJoiner.cpp: Likewise.
	* include/mcs/StreamingJoiner.h: Likewise.
	* src/mcs/StreamingJoiner.cpp: Likewise.

2012-01-02  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* include/mcs/Makefile.am: Add NewJoinerDispatcher.h.
	* include/mcs/NewJoinerDispatcher.h: Newfile.

	* include/mcs/JoinIn.h: Small bug.

	* testsuite/testMessageDispatcher.cpp: Update testcase.

	* include/mcs/NewOutputDispatcher.h: Add infinite loop.
	* include/mcs/RequestDispatcher.h: Add infinite loop.

	* include/mcs/NewBaseDispatcher.h: Fix some small bugs.

	* src/mcs/QueryID.cpp: Encode SHUTDOWN flag into query_id.
	* include/mcs/QueryID.h: Likewise.
	* testsuite/testID: Update testcase.

2012-01-01  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* testsuite/testMessageDispatcher.cpp: On making testcase for the dispatchers.

	* include/network/NewConcurrentMessageDispatcher.h: Add OUTPUT_MQ type.

	* include/mcs/QueryID.h: Encode neighbor_offset into query_id.

	* src/mcs/QueryID.cpp: Likewise.

	* testsuite/testID.cpp: Update testcase.

	* include/mcs/ForwardMessage.h: Add a comment.

	* testsuite/testBeliefState.cpp: Add testcase for removing duplication.

	* include/mcs/ReturnedBeliefState.h: New file.
	* src/mcs/ReturnedBeliefState.cpp: Likewise.